# 2025mm-ssnr-upsampling

./: .gitignore  1.index.md  1.zzz_outline.md  10.center-of-mass-imaging-ctf.md  11.parallax-ctf.md  12.direct-ptychography-ctf.md  13.iterative-ptychography-ctf.md  14.upsampled-direct-ptychography.md  14.zzz_upsampling-limits.md  15.upsampled-examples.md  16.experimental-ssnr-motivation.md  17.spectral-signal-to-noise.md  18.ssnr-summary-slide.md  19.elemental-microscopy-delft.md  2.stem-measurements.md  20.acknowledgments.md  3.phase-problem.md  4.example-reconstructions.md  6.parallax-imaging.md  7.direct-ptychography.md  8.iterative-ptychography.md  9.analytical-ctf-ingredients.md  Dockerfile  myst.yml  pyproject.toml  requirements.txt
notebooks/: 02.stem-measurements-nb.ipynb  03.phase-problem-nb.ipynb  05.center-of-mass-imaging-nb.ipynb  06.parallax-reciprocity-nb.ipynb  07.direct-ptychography-nb.ipynb  10.center-of-mass-imaging-ctf-nb.ipynb  11.parallax-ctf-nb.ipynb  12.direct-ptychography-ctf-nb.ipynb  13.iterative-ptychography-ctf-nb.ipynb  14.upsampled-direct-ptychography-nb.ipynb  15.1.upsampled-example-AuNP-nb.ipynb  15.2.upsampled-example-MoS2-nb.ipynb  15.3.upsampled-example-mof-nb.ipynb  15.4.upsampled-example-vlp-nb.ipynb  8.iterative-ptychography-nb.ipynb  9.analytical-ctf-ingredients-nb.ipynb
notebooks/data/: AuNP_reconstructions.npy  MOSS-6_reconstructions.npy  MoS2_reconstructions.npy  vlp_reconstructions.npy
